--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "Shay DeWael",
   "license": "MIT",
   "dependencies": {
+    "discord-getting-started": "file:",
     "discord-interactions": "^4.0.0",
+    "discord.js": "^14.18.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
